# egoa

./: .clang-format  .clang-tidy  .gitattributes  .gitconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  DoxyfileConfig.in  README.md  _articulation_vertex_detection_8hpp_source.html  _assertions_8hpp_source.html  _auxiliary_2_types_8hpp_source.html  _auxiliary_8hpp_source.html  _betweenness_centrality_8hpp_source.html  _binary_heap_8hpp_source.html  _block_cut_tree_8hpp_source.html  _block_cut_tree_traversal_8hpp_source.html  _bound_8hpp_source.html  _breadth_first_search_8hpp_source.html  _bucket_8hpp_source.html  _bucket_element_8hpp_source.html  _callback_empty_8hpp_source.html  _color_8cpp_source.html  _color_8hpp_source.html  _comparators_8hpp_source.html  _constants_8hpp_source.html  _container_loop_8hpp_source.html  _cycle_detection_8hpp_source.html  _data_structures_2_graphs_2_edges_2_edge_8hpp_source.html  _data_validation_8hpp_source.html  _depth_first_search_8hpp_source.html  _dominating_theta_path_8hpp_source.html  _domination_criterion_8hpp_source.html  _dtp_runtime_collection_8hpp_source.html  _dtp_runtime_row_8hpp_source.html  _dynamic_graph_8hpp_source.html  _dynamic_graph_iterators_8hpp_source.html  (+367 more)
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  code-documentation.yml  codeql.yml  cpp-linter.yml  developer-guideline-check.yml  mega-linter.yml  synopsys-security-scan.yml
cmake/: Boost.cmake  CompilerConfiguration.cmake  CppAD.cmake  Doxygen.cmake  ExternalProjectConfiguration.cmake  FindBonmin.cmake  FindClangTidy.cmake  FindCplex.cmake  FindEigen.cmake  FindGoogleTestFramework.cmake  FindGoogleTestFrameworkOnlineVersion.cmake  FindGurobi.cmake  FindIpopt.cmake  FindOGDF.cmake  HelperFunctions.cmake  InputProperties.cmake  OpenMP.cmake  QtConfiguration.cmake  SetEnvironmentVariables.cmake
data/Windfarms/CableTypes/: 2017-iti-cable-types.json
documentation/includes/: EGOA-Documentation-Latex-Preamble.sty  EGOA_Colors.tex  EGOA_DocumentationLatexPreamble.sty  EGOA_IpeLatexPreamble.tex
documentation/includes/ipe-styles/: EGOA_BasicProperties.isy  EGOA_Colors.isy  EGOA_GeneralSymbols.isy  EGOA_StandardPreamble.isy  EGOA_WindfarmSymbols.isy
evaluations/: serverInformation.sh
evaluations/2018_ACM_The-Maximum-Transmission-Switching-Flow-Problem/experiments/: runStdExperiment.sh
evaluations/2018_ACM_The-Maximum-Transmission-Switching-Flow-Problem/statistics/: gen_dc_maximizing_gurobi_csv_files.sh  gen_plot_dtp_betweenness_centrality.sh  gen_tables.sh  plot-maxst-vs-mtsf-violin-swarm.R  plot_dtp_betweenness_centrality_all.R  plot_dtp_betweenness_centrality_single.R  plot_dtp_betweenness_centrality_single_cutY.R  run_betweenness_DC_NESTA-Parallel.sh  run_betweenness_DC_NESTA-SingleThread.sh  table_models_algorithms.R
evaluations/Helper/: colors.R  plotting.R
include/Algorithms/: BlockCutTreeTraversal.hpp
include/Algorithms/Centralities/: BetweennessCentrality.hpp  GeneratorBasedBetweennessCentrality.hpp
include/Algorithms/GraphTraversal/: ArticulationVertexDetection.hpp  BreadthFirstSearch.hpp  CycleDetection.hpp  DepthFirstSearch.hpp  (+1 more)
include/Auxiliary/: Auxiliary.hpp  Comparators.hpp  Constants.hpp  ContainerLoop.hpp  ExecutionPolicy.hpp  Timer.hpp  Types.hpp
include/DataStructures/: Bound.hpp
include/Exceptions/: Assertions.hpp  Exceptions.hpp
include/IO/: PowerGridIO.hpp
include/MathematicalModel/: Types.hpp
scripts/Experiments/: manageSimulations.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+86 more)
src/: CMakeLists.txt
src/IO/: PowerGridIO.cpp
src/IO/Appearance/: Color.cpp
src/Runnables/: main.cpp
tests/: CMakeLists.txt
tests/Algorithms/Centralities/: TestBetweennessCentrality.cpp  TestBetweennessCentrality.hpp  TestGeneratorBasedBetweennessCentrality.cpp  TestGeneratorBasedBetweennessCentrality.hpp
tests/Algorithms/PathFinding/: TestDominatingThetaPath.cpp  TestDominatingThetaPath.hpp
tests/Algorithms/SpanningTree/: TestSpanningTree.cpp  TestSpanningTree.hpp
tests/Data/Output/: PyPsaExampleJsonWriterExpectedOutput.json
tests/Data/PowerGrids/: ieee_2013_Felsner_Rectangle-and-Square-Representations-of-Planar-Graphs.m  ieee_2018_acm_eEnergy_MTSF_Figure4a.m  ieee_2018_acm_eEnergy_MTSF_Figure4b.m
tests/Data/PowerGrids/PyPSAExample/: carriers.csv  loads.csv  storage_units-inflow.csv
tests/Data/PowerGrids/PyPSAExampleDeathTestDuplicatedGeneratorNames/: buses.csv  generators-p_max_pu.csv  generators.csv  loads-p_set.csv  network.csv  snapshots.csv
tests/Data/PowerGrids/PyPSAExampleDeathTestInconsistencyGenerators/: generators-p_max_pu.csv  generators.csv  lines.csv  lines_new.csv  storage_units-inflow.csv  storage_units.csv
tests/Data/PowerGrids/PyPSAExampleDeathTestInconsistencyInTimestampLength/: generators-p_max_pu.csv  generators.csv  loads-p_set.csv
tests/Data/PowerGrids/PyPSAExampleGeoJsonWriter/: buses.csv  generators-p_max_pu.csv  global_constraints.csv  loads-p_set.csv  storage_units.csv
tests/DataStructures/: TestBound.cpp  TestBound.hpp
tests/DataStructures/Container/: TestBinaryHeap.cpp  TestBinaryHeap.hpp  TestBucket.cpp  TestBucket.hpp  TestMappingBinaryHeap.cpp  TestMappingBinaryHeap.hpp  TestStdQueue.cpp  TestStdQueue.hpp
tests/DataStructures/Graphs/: TestBlockCutTree.cpp  TestBlockCutTree.hpp  TestDynamicGraph.cpp  TestDynamicGraph.hpp  TestGraph.cpp  TestGraph.hpp  TestPowerGrid.cpp  TestPowerGrid.hpp
tests/Helper/: TestHelper.hpp
tests/IO/: TestGeojsonWriter.cpp  TestGeojsonWriter.hpp  TestIeeeCdfMatlabParser.cpp  TestIeeeCdfMatlabParser.hpp  TestPyPsaParser.cpp  TestPyPsaParser.hpp
(+55 files in other folders)
